Remove obsolete HAVE_GCC_VISIBILITY_BROKEN check
<https://llvm.org/bugs/show_bug.cgi?id=12255> "with -fvisibility-inlines-hidden
needed copy not emitted for virtual inline function" (which covers the relevant
part of the Clang bug 11250 mentioned in the check) is reportedly fixed ever
since at last Clang 3.2.

Make this a fatal configure error for now.  The check should be removed
completely after LO 5.3 branch-off.

Change-Id: I47edf92968f32735a509ef649e0e85b891baab4b
Reviewed-on: https://gerrit.libreoffice.org/29074
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -6565,9 +6565,7 @@ _ACEOF
         rm -fr libconftest*
         AC_MSG_RESULT([$gccvisinlineshiddenok])
         if test "$gccvisinlineshiddenok" = "no"; then
-            AC_MSG_WARN([Your gcc/clang is not -fvisibility-inlines-hidden safe, disabling that.])
-            add_warning "Your gcc/clang is not -fvisibility-inlines-hidden safe, disabling that."
-            HAVE_GCC_VISIBILITY_BROKEN="TRUE"
+            AC_MSG_ERROR([Your gcc/clang is not -fvisibility-inlines-hidden safe. This is no longer supported.])
         fi
     fi
 
