Related: rhbz#1366710 fedora mips64 and mips64le use lib64
Change-Id: I34aacd5c15595786b8dde4202a7538c4ff7889a3

--- a/configure.ac
+++ b/configure.ac
@@ -10975,7 +10975,7 @@ AC_SUBST(RHINO_JAR)
 # platforms there.
 supports_multilib=
 case "$host_cpu" in
-x86_64 | powerpc64 | powerpc64le | s390x | aarch64)
+x86_64 | powerpc64 | powerpc64le | s390x | aarch64 | mips64 | mips64el)
     if test "$SAL_TYPES_SIZEOFLONG" = "8"; then
         supports_multilib="yes"
     fi
