configure: non-working ant is an error, not a warning
For example ant 1.8.4 doesn't work with JDK 1.8.

Change-Id: I709fd0591c330cbfe6542976eb2fa0c3aec1e63f

--- a/configure.ac
+++ b/configure.ac
@@ -11928,9 +11928,7 @@ EOF
             echo "configure: Ant test failed" >&5
             cat conftest.java >&5
             cat conftest.xml >&5
-            AC_MSG_WARN([Ant does not work - Some Java projects will not build!])
-            ANT_HOME=""
-            add_warning "Ant does not work - Some Java projects will not build!"
+            AC_MSG_ERROR([Ant does not work - Some Java projects will not build!])
         fi
         rm -f conftest* core core.* *.core
     fi
