configure: reject Apple JDK
Since commit f8cfd6fe5047343fa26f6fc2d8c62666923158b4 the jvmfwk rejects
Apple JDK and while the Java code builds fine with it, various tests such as
CppunitTest_dbaccess_hsqldb_test fail if it is the only installed JRE.

The simplest way to avoid the problem is to not allow building with
Apple JDK.

Change-Id: I5701e38cffded4596ac94608867a038ff76f75ec

--- a/configure.ac
+++ b/configure.ac
@@ -7100,6 +7100,13 @@ _ACEOF
 
     # now check if $JAVA_HOME is really valid
     if test "$_os" = "Darwin" -o "$OS_FOR_BUILD" = MACOSX; then
+        case "${JAVA_HOME}" in
+            /Library/Java/JavaVirtualMachines/*)
+                ;;
+            *)
+                AC_MSG_ERROR([JDK in $JAVA_HOME cannot be used in CppUnit tests - install Oracle JDK])
+                ;;
+        esac
         if test ! -f "$JAVA_HOME/lib/jvm.cfg" -a "x$with_jdk_home" = "x"; then
             JAVA_HOME_OK="NO"
         fi
