fix build on 32-bit ARM on latest Rawhide
Change-Id: If00c42235d6ec92634dc8c23fdcbb50e332ffa68

--- a/configure.ac
+++ b/configure.ac
@@ -7141,7 +7141,8 @@ then
     else
         case "$host_cpu" in
         arm*)
-            my_java_arch=arm
+            AS_IF([test -e "$JAVA_HOME/jre/lib/aarch32/libjawt.so"], [my_java_arch=aarch32], [my_java_arch=arm])
+            JAVA_ARCH=$my_java_arch
             ;;
         i*86)
             my_java_arch=i386
