--- a/extras/source/glade/libreoffice-catalog.xml.in
+++ b/extras/source/glade/libreoffice-catalog.xml.in
@@ -745,6 +745,11 @@
     <glade-widget-class title="Sidebar ToolBox" name="sfxlo-SidebarToolBox"
                         generic-name="Sidebar ToolBox" parent="GtkToolbar"
                         icon-name="widget-gtk-toolbar"/>
+
+    <glade-widget-class title="Writer Navigator ToolBox" name="swlo-SwNavHelpToolBox"
+                        generic-name="Writer Navigator ToolBox" parent="GtkToolbar"
+                        icon-name="widget-gtk-toolbar"/>
+
     <glade-widget-class title="Tab Stop Images" name="cuilo-TabWin_Impl"
                         generic-name="TabWin_Impl" parent="GtkDrawingArea"
                         icon-name="widget-gtk-drawingarea"/>
