add Codelite files to .gitignore
Change-Id: I464748061b9df4d781ae49f4971f73d92f825bba

--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,10 @@ DerivedData
 # gdb config
 /.gdbinit
 /.gdb_history
+
+# Codelite IDE specific
+*.project
+/.codelite
+*.workspace
+*.workspace.session
+*.tags
