poppler: build against libjpeg
Albert Astals Cid points out that --disable-libjpeg causes poppler to
use internal JPEG code instead, which is not actively maintained.

Add LIBJPEG_CFLAGS / LIBJPEG_LIBS to config_host.mk and patch poppler to
respect LIBJPEG_LIBS.

Change-Id: Id19a62a9bd9dc41fee5e8e43e2798e515aacc299
Reviewed-on: https://gerrit.libreoffice.org/30496
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>

--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -320,6 +320,8 @@ export LIBFONTS_JAR=@LIBFONTS_JAR@
 export LIBFORMULA_JAR=@LIBFORMULA_JAR@
 export LIBGCRYPT_CFLAGS=@LIBGCRYPT_CFLAGS@
 export LIBGCRYPT_LIBS=@LIBGCRYPT_LIBS@
+export LIBJPEG_CFLAGS=$(gb_SPACE)@LIBJPEG_CFLAGS@
+export LIBJPEG_LIBS=$(gb_SPACE)@LIBJPEG_LIBS@
 export LIBLANGTAG_CFLAGS=$(gb_SPACE)@LIBLANGTAG_CFLAGS@
 export LIBLANGTAG_LIBS=$(gb_SPACE)@LIBLANGTAG_LIBS@
 export LIBLAYOUT_JAR=@LIBLAYOUT_JAR@
