Clarify comment to mention also HAVE_FEATURE_OPENCL
Change-Id: Ibca8ceedd8c01b4d12ccd9c29838f545fc234347

--- a/configure.ac
+++ b/configure.ac
@@ -10546,8 +10546,8 @@ dnl Check whether to build with OpenCL support.
 dnl =================================================
 
 if test $_os != iOS -a $_os != Android; then
-    # OPENCL in BUILD_TYPE tells that OpenCL is potentially available on the platform (optional at run-time,
-    # used through clew).
+    # OPENCL in BUILD_TYPE and HAVE_FEATURE_OPENCL tell that OpenCL is potentially available on the
+    # platform (optional at run-time, used through clew).
     BUILD_TYPE="$BUILD_TYPE OPENCL"
     AC_DEFINE(HAVE_FEATURE_OPENCL)
 fi
