--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -226,6 +226,7 @@ export ENABLE_WASM_STRIP_EPUB=@ENABLE_WASM_STRIP@
 export ENABLE_WASM_STRIP_EXTRA=@ENABLE_WASM_STRIP@
 export ENABLE_WASM_STRIP_GUESSLANG=@ENABLE_WASM_STRIP@
 export ENABLE_WASM_STRIP_HUNSPELL=
+export ENABLE_WASM_STRIP_LANGUAGETOOL=@ENABLE_WASM_STRIP@
 export ENABLE_WASM_STRIP_LOCALES=@ENABLE_WASM_STRIP@
 export ENABLE_WASM_STRIP_PINGUSER=@ENABLE_WASM_STRIP@
 export ENABLE_WASM_STRIP_PREMULTIPLY=@ENABLE_WASM_STRIP@
