--- a/configure.ac
+++ b/configure.ac
@@ -3080,6 +3080,7 @@ if test "$enable_wasm_strip" = "yes"; then
     AC_DEFINE(ENABLE_WASM_STRIP_EXTRA)
     AC_DEFINE(ENABLE_WASM_STRIP_GUESSLANG)
 #    AC_DEFINE(ENABLE_WASM_STRIP_HUNSPELL)
+    AC_DEFINE(ENABLE_WASM_STRIP_LANGUAGETOOL)
     AC_DEFINE(ENABLE_WASM_STRIP_PINGUSER)
     AC_DEFINE(ENABLE_WASM_STRIP_PREMULTIPLY)
     AC_DEFINE(ENABLE_WASM_STRIP_RECENT)
