--- a/sysui/desktop/menus/base.desktop
+++ b/sysui/desktop/menus/base.desktop
@@ -20,12 +20,12 @@ Version=1.0
 Terminal=false
 Icon=base
 Type=Application
-Categories=Office;Database;X-Red-Hat-Base;X-MandrivaLinux-MoreApplications-Databases;
+Categories=Office;Database;X-Red-Hat-Base;
 Exec=${UNIXBASISROOTNAME} --base %%FILE%%
 MimeType=application/vnd.oasis.opendocument.database;application/vnd.sun.xml.base;
 Name=%PRODUCTNAME Base
 GenericName=Database Development
-Comment=Manage databases, create queries and reports to track and manage your information
+Comment=Manage databases, create queries and reports to track and manage your information.
 StartupNotify=true
 X-GIO-NoFuse=true
 Keywords=Data;SQL;
